# ConsistentChat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config_example.py  dialogue_generator.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: dummy_data.json
prompt/: query_template_en.txt  response_template_en.txt
